--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,15 +1,23 @@
-<app-header [title]="title" />
-<p-splitter
-    [panelSizes]="[20, 80]"
-    [style]="{ height: 'calc(100vh - 100px)' }">
-    <ng-template pTemplate>
-        <div class="w-full">
-            <app-panel-menu />
-        </div>
-    </ng-template>
-    <ng-template pTemplate>
-        <div class="w-full app-content">
-            <router-outlet></router-outlet>
-        </div>
-    </ng-template>
-</p-splitter>
+<!-- Layout normal avec sidebar -->
+<div *ngIf="!isAuthPage()">
+  <app-header [title]="title" />
+  <p-splitter
+      [panelSizes]="[20, 80]"
+      [style]="{ height: 'calc(100vh - 100px)' }">
+      <ng-template pTemplate>
+          <div class="w-full">
+              <app-panel-menu />
+          </div>
+      </ng-template>
+      <ng-template pTemplate>
+          <div class="w-full app-content">
+              <router-outlet></router-outlet>
+          </div>
+      </ng-template>
+  </p-splitter>
+</div>
+
+<!-- Layout plein écran pour l'authentification -->
+<div *ngIf="isAuthPage()" class="auth-layout">
+  <router-outlet></router-outlet>
+</div>
