--- a/front/src/app/shared/features/auth/sign-up/sign-up.component.html
+++ b/front/src/app/shared/features/auth/sign-up/sign-up.component.html
@@ -19,12 +19,12 @@
                 id="username"
                 name="username"
                 type="text"
-                [(ngModel)]="userData.username"
+                [(ngModel)]="userData.lastName"
                 required
                 minlength="3"
                 class="modern-input"
               />
-              <label for="username" class="floating-label">Nom d'utilisateur</label>
+              <label for="username" class="floating-label">Nom</label>
             </div>
           </div>
 
@@ -36,7 +36,7 @@
                 id="firstname"
                 name="firstname"
                 type="text"
-                [(ngModel)]="userData.firstname"
+                [(ngModel)]="userData.firstName"
                 required
                 class="modern-input"
               />
