--- a/front/src/app/products/ui/product-form/product-form.component.html
+++ b/front/src/app/products/ui/product-form/product-form.component.html
@@ -1,1 +1,114 @@
+<form #form="ngForm" (ngSubmit)="onSave()">
+  <div class="form-field">
+    <label for="code">Code</label>
+    <input pInputText
+      type="text"
+      id="code"
+      name="code"
+      [(ngModel)]="editedProduct().code"
+      required>
+  </div>
+  
+  <div class="form-field">
+    <label for="name">Nom</label>
+    <input pInputText
+      type="text"
+      id="name"
+      name="name"
+      [(ngModel)]="editedProduct().name"
+      required>
+  </div>
+  
+  <div class="form-field">
+    <label for="description">Description</label>
+    <textarea pInputTextarea
+      id="description"
+      name="description"
+      rows="5"
+      cols="30"
+      [(ngModel)]="editedProduct().description">
+    </textarea>
+  </div>
+  
+  <div class="form-field">
+    <label for="image">Image URL</label>
+    <input pInputText
+      type="text"
+      id="image"
+      name="image"
+      [(ngModel)]="editedProduct().image">
+  </div>
+  
+  <div class="form-field">
+    <label for="category">Catégorie</label>
+    <p-dropdown
+      [options]="categories"
+      [(ngModel)]="editedProduct().category"
+      name="category"
+      appendTo="body"
+    />
+  </div>
+  
+  <div class="form-field">
+    <label for="price">Prix</label>
+    <p-inputNumber
+      [(ngModel)]="editedProduct().price"
+      name="price"
+      mode="decimal"
+      [minFractionDigits]="2"
+      required/>
+  </div>
+  
+  <div class="form-field">
+    <label for="quantity">Quantité</label>
+    <p-inputNumber
+      [(ngModel)]="editedProduct().quantity"
+      name="quantity"
+      [min]="0"
+      required/>
+  </div>
+  
+  <div class="form-field">
+    <label for="internalReference">Référence interne</label>
+    <input pInputText
+      type="text"
+      id="internalReference"
+      name="internalReference"
+      [(ngModel)]="editedProduct().internalReference">
+  </div>
+  
+  <div class="form-field">
+    <label for="shellId">Shell ID</label>
+    <p-inputNumber
+      [(ngModel)]="editedProduct().shellId"
+      name="shellId"
+      [min]="0"
+      required/>
+  </div>
+  
+  <div class="form-field">
+    <label for="inventoryStatus">Statut d'inventaire</label>
+    <p-dropdown
+      [options]="inventoryStatuses"
+      [(ngModel)]="editedProduct().inventoryStatus"
+      name="inventoryStatus"
+      appendTo="body"
+      required
+    />
+  </div>
 
+  <div class="form-field">
+    <label for="rating">Note</label>
+    <p-inputNumber
+      [(ngModel)]="editedProduct().rating"
+      name="rating"
+      [min]="0"
+      [max]="5"
+    />
+  </div>
+  
+  <div class="flex justify-content-between">
+    <p-button type="button" (click)="onCancel()" label="Annuler" severity="help"/>
+    <p-button type="submit" [disabled]="!form.valid" label="Enregistrer" severity="success"/>
+  </div>
+</form>
