refact: organisation du code front

--- a/front/src/app/shared/features/auth/sign-in/sign-in.component.html
+++ b/front/src/app/shared/features/auth/sign-in/sign-in.component.html
@@ -73,7 +73,7 @@
           </div>
           <p class="signup-link">
             Nouveau sur ALTEN SHOP ?
-            <a routerLink="/sign-up" class="link-primary">Créer un compte</a>
+            <a routerLink="/account/sign-up" class="link-primary">Créer un compte</a>
           </p>
         </div>
       </form>
