--- a/front/src/app/shared/features/auth/sign-up/sign-up.component.html
+++ b/front/src/app/shared/features/auth/sign-up/sign-up.component.html
@@ -114,7 +114,7 @@
           </div>
           <p class="signin-link">
             Déjà membre ?
-            <a routerLink="/sign-in" class="link-primary">Se connecter</a>
+            <a routerLink="/account/sign-in" class="link-primary">Se connecter</a>
           </p>
         </div>
       </form>
