--- a/front/src/app/products/features/product-list/admin/product-list.component.html
+++ b/front/src/app/products/features/product-list/admin/product-list.component.html
@@ -77,6 +77,7 @@
                 </td>
                 <td>{{ product.id }}</td>
                 <td><code>{{ product.code }}</code></td>
+                <td>{{ product.name }}</td>
                 <td>
                     <span class="category-badge">{{ product.category }}</span>
                 </td>
